app/css/style.css
html body {
	height: 100%;
	margin: 0;
	width: 100%;
}
body {
	padding-top: 50px;
}

.container {
	width: 992px !important;
}

canvas {
	display: block;
	max-width: 100%;
	max-height: 100%;
	margin: 0;
	margin-top: -50px;
	padding-top: 50px;
}

